[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "backgrounder_tob"
version = "0.0.1"
authors = [
  { name="tob", email="tob@tob.com" },
]
description = "A tool to simplify the resizing of images"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tob-0/python-background-creator"
"Bug Tracker" = "https://github.com/tob-0/python-background-creator/issues"